<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_wallpaper1"
    android:padding="20dp"
    android:scrollbarSize="5dp"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="top|center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/profile_photo"
            android:src="@drawable/profile_picture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/desc"
            android:textColor="@color/orange"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/montserrat_medium"
            android:justificationMode="inter_character"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/BlurView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:elevation="10dp"
            app:blurOverlayColor="@color/grey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/education"
                    android:textColor="@color/orange"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/education"
                    android:src="@drawable/ill_education" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/mca"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/bca"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </eightbitlab.com.blurview.BlurView>

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/BlurView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:elevation="10dp"
            app:blurOverlayColor="@color/grey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/skill"
                    android:textColor="@color/orange"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/skill"
                    android:src="@drawable/ill_skill" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/skill1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/skill2"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/skill3"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </eightbitlab.com.blurview.BlurView>

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/BlurView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:elevation="10dp"
            app:blurOverlayColor="@color/grey">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/projects"
                    android:textColor="@color/orange"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/projects"
                    android:src="@drawable/ill_project" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/project1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/project2"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/project3"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </eightbitlab.com.blurview.BlurView>

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/BlurView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:elevation="10dp"
            app:blurOverlayColor="@color/grey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/certificate"
                    android:textColor="@color/orange"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/certificate"
                    android:src="@drawable/ill_certificate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/certificate1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/certificate2"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/certificate3"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </eightbitlab.com.blurview.BlurView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/idk"
                android:contentDescription="@string/socials"
                android:src="@drawable/icon_phone" />

            <ImageButton
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/idk"
                android:contentDescription="@string/socials"
                android:src="@drawable/icon_email" />

            <ImageButton
                android:id="@+id/linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/idk"
                android:contentDescription="@string/socials"
                android:src="@drawable/icon_linkedin" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</ScrollView>
